--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -41,9 +41,10 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: src/package-lock.json
+        working-directory: src
 
     - name: npm install, build, and test
+      working-directory: src
       run: |
         npm install
         npm run build --if-present
