--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        working-directory: src
+        cache-dependency-path: src/package-lock.json
 
     - name: npm install, build, and test
       working-directory: src
